# debate_app

./: package-lock.json
debate-agent/: .env.example  DEPLOY.md  Dockerfile  README.md  agent.py  config.py  logging_config.py  requirements.txt  session.py  transcript.py
debate-agent/moderation/: classifier.py  config.py  frames.py  internal_client.py  moderator.py
debate-agent/pipeline/: cache.py  extraction.py  llm_json.py  models.py  normalize.py  verification.py
debate-agent/scripts/: pipeline_demo.py  room_probe.py
debate-agent/tests/: conftest.py  test_cache.py  test_config_guards.py  (+6 more)
debate-api/: .env.example  DEPLOY.md  Dockerfile  README.md  alembic.ini  docker-entrypoint.sh  pyproject.toml
debate-api/alembic/: env.py
debate-api/alembic/versions/: 0001_initial.py  0002_moderation.py
debate-api/app/: auth.py  config.py  db.py  livekit_rooms.py  livekit_tokens.py  logging_config.py  main.py  matchmaking.py  models.py  ws.py
debate-api/app/routes/: auth_routes.py  health.py  matches.py  moderation.py  topics.py
debate-api/scripts/: block_demo.py  endpoints.py  moderate.py  seed.py  two_client_demo.py
debate-api/tests/: conftest.py  test_auth.py  test_config.py  test_livekit_rooms.py  test_matchmaker.py  test_moderation.py  test_ws.py
debate-infra/: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  livekit.yaml.template
debate-mobile/: .env.example  .npmrc  BUILD_AND_SHIP.md  README.md  app.config.js  app.json  eas.json  index.ts  package-lock.json  package.json
debate-web-demo/: README.md  app.js  index.html
(+25 files in other folders)
